Made the game super fun.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 			src = "js/funnerGunner.js"></script>
    
 </head>
+<style>
+	body {
+		background-color: black;
+	}
+</style>
 <body onload = "init()">
     
 </body>
