Ready for submission. Added camera shake, enemy hit sprite, and sound effects.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>redBall.html</title>
+    <title>Spin-To-Win</title>
 	<script src="js/simpleGame.js"></script>
     <script type="text/javascript"
 			src = "js/funnerGunner.js"></script>
